<resources>
    <string name="app_name">My CURP Roberto</string>
    <string name="ingresa_los_datos_que_se_le_piden">Ingresa los datos que se le piden</string>
    <string name="nombre_s">Nombre(s):</string>
    <string name="apellido_paterno">Apellido Paterno:</string>
    <string name="apellido_materno">Apellido Materno:</string>
    <string name="dia">Día</string>
    <string name="mes">Mes</string>
    <string name="a_o">Año</string>
    <string name="genero">Genero</string>
    <string name="estado">Estado</string>
    <string name="tu_curp_es">Tu CURP es:</string>
    <string name="obtener_curp">Obtener CURP</string>
    <string name="limpiar_datos">Limpiar Datos</string>

    <string-array name="Days">
        <item>Dia</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="Mes">
        <item>Mes</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="Year">
        <item>Año</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
        <item>1949</item>
        <item>1948</item>
        <item>1947</item>
        <item>1946</item>
        <item>1945</item>
        <item>1944</item>
        <item>1943</item>
        <item>1942</item>
        <item>1941</item>
        <item>1940</item>
    </string-array>
    <string-array name="Genero">
        <item>Sexo</item>
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>
    <string-array name="Estado">
        <item>Estado</item>
        <item>AS-Aguascalientes</item>
        <item>BC-Baja California</item>
        <item>BS-Baja California Sur</item>
        <item>CC-Campeche</item>
        <item>CL-Coahuila</item>
        <item>CM-Colima</item>
        <item>CS-Chiapas</item>
        <item>CH-Chihuahua</item>
        <item>DG-Durango</item>
        <item>GT-Guanajuato</item>
        <item>GR-Guerrero</item>
        <item>HG-Hidalgo</item>
        <item>JC-Jalisco</item>
        <item>MC-México</item>
        <item>MN-Michoacán</item>
        <item>MS-Morelos</item>
        <item>NT-Nayarit</item>
        <item>NL-Nuevo León</item>
        <item>OC-Oaxaca</item>
        <item>PL-Puebla</item>
        <item>QT-Querétaro"</item>
        <item>QR-Quintana Roo</item>
        <item>SP-San Luis Potosí</item>
        <item>SL-Sinaloa</item>
        <item>SR-Sonora</item>
        <item>TC-Tabasco</item>
        <item>TS-Tamaulipas</item>
        <item>TL-Tlaxcala</item>
        <item>VZ-Veracruz</item>
        <item>YN-Yucatan</item>
        <item>ZS-Zacatecas</item>
        <item>NE-Nacido en el Extrenjero</item>
    </string-array>

</resources>